[package]
name = "website_monitor"
version = "0.1.0"
authors = ["GlazedPineapple <eokovacs1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio02"] }
color-eyre = "0.5.10"
dotenv = "0.15.0"
soup = "0.5.1"
surf = "2.2.0"
twilio-async = "0.4.1"

[patch.crates-io]
async-attributes = { git = "https://github.com/DusterTheFirst/async-attributes", branch = "less-annoying" }
