[package]
name = "website_monitor"
version = "0.1.0"
authors = ["GlazedPineapple <eokovacs1@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11.3", features = ["rustls-tls"], default-features = false }
dotenv = "0.15.0"
scraper = "0.12.0"
tokio = { version = "1.16.1", features = ["rt"] }
twilio = "1.0.0"
